--- a/css/index.css
+++ b/css/index.css
@@ -22,3 +22,76 @@ html, body {
   font-family: "Roboto Regular";
   font-size: 18px; color: #202020;
 }
+
+ul {
+  list-style-type: none;
+  margin: 0; padding: 0;
+}
+
+h1 {
+  white-space: none;
+  margin: 0; padding: 0;
+  font-family: "Roboto Bold";
+  color: #101010;
+  user-select: none;
+}
+
+/* Navigation bar */
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%; height: 64px;
+  border-bottom: 3px solid #101010;
+}
+/* Navigation bar buttons */
+nav button {
+  background: none; outline: none; border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 10px;
+  position: absolute;
+}
+nav button > img {
+  width: 50px; height: 50px;
+}
+#homeButton {
+  top: 5px; left: 5px;
+}
+#dropdownButton {
+  top: 5px; right: 5px;
+}
+/* Title/Header */
+nav > h1 {
+  font-size: 35px;
+  position: absolute;
+}
+
+#dropdownList {
+  display: none;
+  position: absolute;
+  top: 71px; right: 10px;
+  border: 3px solid #101010;
+  font-size: 25px;
+}
+#dropdownList > li {
+  padding: 5px 10px;
+  cursor: pointer;
+  user-select: none;
+}
+
+main {
+  width: 100%; height: calc(100% - 64px);
+  position: fixed; bottom: 0;
+  z-index: -9999;
+}
+
+#logoContainer > img {
+  width: auto; height: 500px;
+}
+
+@media screen and (max-width: 650px) {
+  nav > h1 { display: none; }
+}
