--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,7 @@
 html, body {
   max-height: 100vh;
   margin: 0; padding: 0;
-  background: rgb(249, 230, 218);
+  background: #F9E6DA;
   font-family: "Roboto Regular";
   font-size: 18px; color: #202020;
 }
@@ -143,7 +143,7 @@ main {
   border-radius: 10px;
 }
 .infoBox p {
-  width: 500px; height: auto;
+  width: 450px; height: auto;
   font-size: 22px;
   padding: 20px;
 }
@@ -153,7 +153,7 @@ main {
   padding: 10px 0px;
 }
 .infoBox ul {
-  width: 350px; height: auto;
+  max-width: 400px; height: auto;
   list-style-type: upper-roman;
   margin-left: 50px;
   margin-right: 20px;
